--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
         </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
               rel="stylesheet">
+
+
         <link rel="stylesheet" href="{% static 'general/css/base.css' %}">
         {% block head %}
         {% endblock head %}
@@ -21,7 +23,9 @@
     <body>
         {% block body %}
         {% endblock body %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.11"></script>
+
 
 </html>
