--- a/apps/accounts/templates/register.html
+++ b/apps/accounts/templates/register.html
@@ -25,6 +25,7 @@
                     </section>
                     <hr>
                     <h2 class="fonte-destaque1 mb-3">Cadastre-se</h2>
+                    {% include 'partials/messages.html' %}
                     {% crispy register_form register_form.helper %}
                 </div>
 
