--- a/apps/accounts/templates/login.html
+++ b/apps/accounts/templates/login.html
@@ -21,7 +21,7 @@
                         <label class="text-logo">HEALING</label>
                     </section>
                     <hr>
-                    <h2 class="fonte-destaque1 mb-3">Logar</h2>
+                    <h2 class="fonte-destaque1 mb-3">{% trans 'Login' %}</h2>
                     {% include 'partials/messages.html' %}
                     {% crispy login_form login_form.helper %}
                 </div>
